# crabbytty

./: .gdbinit  Cargo.toml  README.md  memory.x  poke_device.py
atsamd11/: Cargo.toml  update.sh
atsamd11/src/: lib.rs  port.rs  usb.rs
atsamd11/src/ac/: compctrl.rs
atsamd11/src/gclk/: clkctrl.rs  genctrl.rs  gendiv.rs
atsamd11/src/nvmctrl/: ctrlb.rs
atsamd11/src/pm/: ahbmask.rs  apbamask.rs  apbbmask.rs  apbcmask.rs
atsamd11/src/port/: ctrl.rs  dir.rs  dirclr.rs  dirset.rs  dirtgl.rs  in_.rs  out.rs  outclr.rs  outset.rs  outtgl.rs  pincfg0_.rs  wrconfig.rs
atsamd11/src/sysctrl/: dfllctrl.rs  dfllmul.rs  dfllval.rs  pclksr.rs
atsamd11/src/usb/: ctrla.rs  ctrlb.rs  dadd.rs  descadd.rs  epcfg.rs  epintenclr.rs  epintenset.rs  epintflag.rs  epintsmry.rs  epstatus.rs  epstatusclr.rs  epstatusset.rs  intenclr.rs  intenset.rs  intflag.rs  padcal.rs  syncbusy.rs
src/: main.rs
usb-justthebits/: Cargo.toml
usb-justthebits/src/: lib.rs
