[package]
authors = ["Robert Ou"]
edition = "2018"
readme = "README.md"
name = "crabbytty"
version = "0.0.1"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.11"
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.atsamd11]
features = ["rt"]
path = "atsamd11"

[dependencies.usb-justthebits]
path = "usb-justthebits"

[dependencies.num_enum]
version = "0.4.2"
default-features = false

# this lets you use `cargo fix`!
[[bin]]
name = "crabbytty"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
